# ff1

./: .gitmodules  .mcp.json  AGENTS.md  README.md  pyproject.toml  skill.md
.claude-plugin/: marketplace.json  plugin.json
commands/: ff1.md
skills/ff1-control/: SKILL.md
src/ff1/: __init__.py  cli.py  client.py  discovery.py  playlist.py  server.py  types.py  url_policy.py
tests/: test_client.py  test_discovery.py  test_playlist.py  test_types.py  test_url_policy.py
