[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ff1ctl"
version = "0.1.0"
description = "CLI and agent toolkit for controlling FF1 art computers"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
    "pydantic>=2",
    "click>=8",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]

[project.scripts]
ff1ctl = "ff1.cli:main"
ff1-mcp = "ff1.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ff1"]
